--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,21 +4,21 @@
 #
 #    pip-compile requirements-dev.in
 #
-anyio==3.6.1
+anyio==3.6.2
     # via watchfiles
 asgiref==3.5.2
     # via
     #   -c requirements.txt
     #   django
-astroid==2.12.8
+astroid==2.12.12
     # via pylint
-asttokens==2.0.8
+asttokens==2.1.0
     # via stack-data
-autopep8==1.7.0
+autopep8==2.0.0
     # via -r requirements-dev.in
 backcall==0.2.0
     # via ipython
-build==0.8.0
+build==0.9.0
     # via pip-tools
 click==8.1.3
     # via
@@ -28,30 +28,30 @@ decorator==5.1.1
     # via
     #   ipdb
     #   ipython
-dill==0.3.5.1
+dill==0.3.6
     # via pylint
-django==3.2.15
+django==3.2.16
     # via
     #   -c requirements.txt
     #   django-stubs
     #   django-stubs-ext
-django-stubs==1.12.0
+django-stubs==1.13.0
     # via -r requirements-dev.in
-django-stubs-ext==0.5.0
+django-stubs-ext==0.7.0
     # via django-stubs
-executing==1.0.0
+executing==1.2.0
     # via stack-data
 flake8==5.0.4
     # via -r requirements-dev.in
 graphene-stubs==0.15
     # via -r requirements-dev.in
-idna==3.3
+idna==3.4
     # via
     #   -c requirements.txt
     #   anyio
 ipdb==0.13.9
     # via -r requirements-dev.in
-ipython==8.5.0
+ipython==8.6.0
     # via
     #   -r requirements-dev.in
     #   ipdb
@@ -61,7 +61,7 @@ isort==5.10.1
     #   pylint
 jedi==0.18.1
     # via ipython
-lazy-object-proxy==1.7.1
+lazy-object-proxy==1.8.0
     # via astroid
 matplotlib-inline==0.1.6
     # via ipython
@@ -69,7 +69,7 @@ mccabe==0.7.0
     # via
     #   flake8
     #   pylint
-mypy==0.971
+mypy==0.982
     # via
     #   -r requirements-dev.in
     #   django-stubs
@@ -88,7 +88,7 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==6.8.0
+pip-tools==6.9.0
     # via -r requirements-dev.in
 platformdirs==2.5.2
     # via pylint
@@ -110,7 +110,7 @@ pygments==2.13.0
     # via
     #   -c requirements.txt
     #   ipython
-pylint==2.15.0
+pylint==2.15.5
     # via
     #   -r requirements-dev.in
     #   pylint-django
@@ -123,7 +123,7 @@ pyparsing==3.0.9
     # via
     #   -c requirements.txt
     #   packaging
-pytz==2022.2.1
+pytz==2022.6
     # via
     #   -c requirements.txt
     #   django
@@ -133,42 +133,41 @@ six==1.16.0
     #   asttokens
 sniffio==1.3.0
     # via anyio
-sqlparse==0.4.2
+sqlparse==0.4.3
     # via
     #   -c requirements.txt
     #   django
-stack-data==0.5.0
+stack-data==0.6.0
     # via ipython
 toml==0.10.2
-    # via
-    #   autopep8
-    #   ipdb
+    # via ipdb
 tomli==2.0.1
     # via
     #   -c requirements.txt
+    #   autopep8
     #   build
     #   django-stubs
     #   mypy
     #   pep517
     #   pylint
-tomlkit==0.11.4
+tomlkit==0.11.6
     # via pylint
-traitlets==5.3.0
+traitlets==5.5.0
     # via
     #   ipython
     #   matplotlib-inline
-types-pytz==2022.2.1.0
+types-pytz==2022.6.0.1
     # via django-stubs
-types-pyyaml==6.0.11
+types-pyyaml==6.0.12.1
     # via django-stubs
-typing-extensions==4.3.0
+typing-extensions==4.4.0
     # via
     #   -c requirements.txt
     #   django-stubs
     #   django-stubs-ext
     #   graphene-stubs
     #   mypy
-watchfiles==0.16.1
+watchfiles==0.18.0
     # via -r requirements-dev.in
 wcwidth==0.2.5
     # via
