Auto-fill identifiers for attribute types, choice options and reports

--- a/requirements.in
+++ b/requirements.in
@@ -68,3 +68,5 @@ wagtailsvg
 django-countries
 tzdata
 django-storages
+django-autoslug
+unidecode  # for decoding non-ASCII characters nicely in slugs, used optionally by django-autoslug
