--- a/requirements.txt
+++ b/requirements.txt
@@ -121,6 +121,8 @@ django-autocomplete-light==3.9.4
     # via
     #   -r requirements.in
     #   dal-admin-filters
+django-autoslug==1.9.8
+    # via -r requirements.in
 django-ckeditor==6.4.0
     # via -r requirements.in
 django-cors-headers==3.12.0
@@ -417,7 +419,9 @@ typing-extensions==4.2.0
 tzdata==2022.7
     # via -r requirements.in
 unidecode==1.3.4
-    # via graphene-django
+    # via
+    #   -r requirements.in
+    #   graphene-django
 uritemplate==4.1.1
     # via
     #   -r requirements.in
