--- a/requirements.in
+++ b/requirements.in
@@ -70,3 +70,4 @@ tzdata
 django-storages
 django-autoslug
 unidecode  # for decoding non-ASCII characters nicely in slugs, used optionally by django-autoslug
+xlsxwriter
