--- a/requirements.txt
+++ b/requirements.txt
@@ -488,6 +488,8 @@ wrapt==1.14.1
 xlrd==2.0.1
     # via tablib
 xlsxwriter==3.0.3
-    # via wagtail
+    # via
+    #   -r requirements.in
+    #   wagtail
 xlwt==1.3.0
     # via tablib
