Add Google authentication

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ x-django-environment: &django-environment
   - OIDC_CLIENT_SECRET
   - AZURE_AD_CLIENT_ID
   - AZURE_AD_CLIENT_SECRET
+  - GOOGLE_CLIENT_ID
+  - GOOGLE_CLIENT_SECRET
   - MAILGUN_API_KEY
   - MAILGUN_SENDER_DOMAIN
   - MAILGUN_REGION
