--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
   "repository": "https://github.com/kausaltech/kausal-watch",
   "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "@apollo/client": "^3.1.3",
-    "@sentry/browser": "^5.22.3",
-    "ag-grid-community": "^23.2.1",
-    "mjml": "^4.7.1",
-    "moment": "^2.27.0"
+    "mjml": "^4.7.1"
   },
   "devDependencies": {}
 }
