Compile notification translations in Docker build

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -49,6 +49,7 @@ RUN npm install
 COPY . /code/
 RUN ./manage.py collectstatic --no-input
 RUN ./manage.py compilemessages
+RUN pybabel compile -D notifications -d locale
 COPY ./docker/app/docker-entrypoint.sh /
 COPY ./docker/app/wait-for-it.sh /
 
