--- a/requirements.in
+++ b/requirements.in
@@ -1,6 +1,7 @@
 django
 #-e git+https://github.com/juyrjola/django-modelcluster.git#egg=django-modelcluster
-git+https://github.com/kausaltech/wagtail-orderable.git#egg=wagtail-orderable
+#git+https://github.com/kausaltech/wagtail-orderable.git#egg=wagtail-orderable
+wagtail-orderable
 djangorestframework
 django-helusers
 social-auth-app-django
