--- a/requirements.txt
+++ b/requirements.txt
@@ -72,6 +72,7 @@ defusedxml==0.7.1
     #   odfpy
     #   python3-openid
     #   social-auth-core
+    #   willow
 deprecated==1.2.13
     # via redis
 deprecation==2.1.0
@@ -103,9 +104,7 @@ django==3.2.16
     #   easy-thumbnails
     #   graphene-django
     #   wagtail
-    #   wagtail-grapple
     #   wagtail-localize
-    #   wagtailfontawesome
 django-anymail[mailgun,sendgrid]==8.6
     # via -r requirements.in
 django-appconf==1.0.5
@@ -184,12 +183,13 @@ factory-boy==3.2.1
     # via
     #   -r requirements.in
     #   pytest-factoryboy
-    #   wagtail-factories
 faker==15.3.1
     # via factory-boy
+filetype==1.2.0
+    # via willow
 graphene==3.1.1
     # via graphene-django
-graphene-django @ https://github.com/graphql-python/graphene-django/archive/2aeb86ba3bed7dc821cc8508e1dca8297aa7dea4.zip
+graphene-django==3.0.2
     # via
     #   -r requirements.in
     #   wagtail-grapple
@@ -402,40 +402,34 @@ vine==5.0.0
     #   amqp
     #   celery
     #   kombu
-wagtail==4.1.1
+wagtail==5.0
     # via
     #   -r requirements.in
     #   wagtail-autocomplete
-    #   wagtail-factories
     #   wagtail-grapple
     #   wagtail-headless-preview
     #   wagtail-localize
     #   wagtail-orderable
-    #   wagtailfontawesome
     #   wagtailgeowidget
 wagtail-admin-list-controls==0.1.7
     # via -r requirements.in
 wagtail-autocomplete==0.9.0
     # via -r requirements.in
-wagtail-factories==4.0.0
-    # via -r requirements.in
-wagtail-generic-chooser==0.4.0
+wagtail-generic-chooser==0.5.1
     # via
     #   -r requirements.in
     #   wagtailsvg
-wagtail-grapple @ https://github.com/kausaltech/wagtail-grapple/archive/be8e27bee0d7eae6a943ca360d8b4211bfded4c4.zip
+wagtail-grapple @ https://github.com/torchbox/wagtail-grapple/archive/7c3212888417d59ec46c47b163da6a141ac20f10.zip
     # via -r requirements.in
 wagtail-headless-preview==0.4.0
     # via wagtail-grapple
-wagtail-localize==1.3.2
+wagtail-localize==1.5
     # via -r requirements.in
 wagtail-orderable==1.1.0
     # via -r requirements.in
-wagtailfontawesome==1.2.1
-    # via -r requirements.in
 wagtailgeowidget==7.0.0
     # via -r requirements.in
-wagtailsvg==0.0.35
+wagtailsvg==0.0.37
     # via -r requirements.in
 wcwidth==0.2.5
     # via prompt-toolkit
@@ -443,7 +437,7 @@ webencodings==0.5.1
     # via
     #   html5lib
     #   tinycss2
-willow==1.4.1
+willow==1.5
     # via wagtail
 wrapt==1.14.1
     # via deprecated
