--- a/requirements.in
+++ b/requirements.in
@@ -35,7 +35,7 @@ factory-boy
 pytest-factoryboy
 libvoikko
 https://github.com/kausaltech/django-modeltrans/archive/27bd15f13f091e9ac388241bfce902da98074a55.zip
-wagtail>=4.1
+wagtail
 wagtail-autocomplete
 wagtail-generic-chooser
 wagtail-localize
@@ -46,9 +46,10 @@ coreapi
 pyyaml
 django_redis
 uritemplate
-wagtail-grapple
+#wagtail-grapple
+# The current wagtail-grapple release does not support Wagtail 5. Once it does, unpin this.
+https://github.com/torchbox/wagtail-grapple/archive/b4e256c97548ab742aec8eec908ca3ed5f7b3f48.zip
 tinycss2
-wagtail-admin-list-controls
 humanize
 elasticsearch>=7.0.0,<8.0.0
 rich
