--- a/requirements.in
+++ b/requirements.in
@@ -72,3 +72,4 @@ django-autoslug
 unidecode  # for decoding non-ASCII characters nicely in slugs, used optionally by django-autoslug
 xlsxwriter
 Babel
+polars
