Working round-trip excel test starter pack

--- a/requirements.in
+++ b/requirements.in
@@ -72,4 +72,5 @@ django-autoslug
 unidecode  # for decoding non-ASCII characters nicely in slugs, used optionally by django-autoslug
 xlsxwriter
 Babel
-polars
+polars[xlsx2csv]
+
