Improve ENV variables controlling email from headers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,9 @@ x-django-environment: &django-environment
   - CELERY_BROKER_URL=redis://redis:6379
   - CELERY_RESULT_BACKEND=redis://redis:6379
   - GOOGLE_MAPS_V3_APIKEY
+  - ALLOWED_SENDER_EMAILS
+  - SERVER_EMAIL
+  - DEFAULT_FROM_EMAIL
 
 x-django-build: &django-build
   context: .
