--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ x-django-environment: &django-environment
   - MAILGUN_API_KEY
   - MAILGUN_SENDER_DOMAIN
   - MAILGUN_REGION
+  - MAILJET_API_KEY
+  - MAILJET_SECRET_KEY
   - HOSTNAME_PLAN_DOMAINS
   - ELASTICSEARCH_URL
   - ADMIN_WILDCARD_DOMAIN
