--- a/requirements.in
+++ b/requirements.in
@@ -31,6 +31,7 @@ Jinja2
 django-parler
 django-anymail[mailgun]
 django-anymail[sendgrid]
+django-anymail[mailjet]
 django-reversion
 pytest-django
 pytest-cov
