--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,9 @@ ignore = E309
 [pydocstyle]
 ignore=D100,D104,D105,D200,D203,D400
 
+[pycodestyle]
+max-line-length = 140
+
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = aplans.settings
 norecursedirs = node_modules data .git venv Attic
