Upgrade to Wagtail 5.1

--- a/requirements.in
+++ b/requirements.in
@@ -69,4 +69,4 @@ unidecode  # for decoding non-ASCII characters nicely in slugs, used optionally 
 xlsxwriter
 Babel
 polars[xlsx2csv]
-
+wagtail-modeladmin
