Switch to pyproject.toml; split linting-related requirements to requirements-lint

--- a/requirements-dev.in
+++ b/requirements-dev.in
@@ -1,15 +1,7 @@
 -c requirements.txt
+-c requirements-lint.txt
 watchfiles
-#python-language-server[Rope,Pyflakes,McCabe,YAPF]
-isort
-autopep8
-flake8
 ipython
 pip-tools
-pylint
-pylint-django
-mypy
-django-stubs
-graphene-stubs
 ipdb
 pdbpp
