Add OKTA authentication backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,9 @@ x-django-environment: &django-environment
   - AZURE_AD_CLIENT_SECRET
   - GOOGLE_CLIENT_ID
   - GOOGLE_CLIENT_SECRET
+  - OKTA_CLIENT_ID
+  - OKTA_CLIENT_SECRET
+  - OKTA_API_URL
   - MAILGUN_API_KEY
   - MAILGUN_SENDER_DOMAIN
   - MAILGUN_REGION
