Add env variables for adfs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,9 @@ x-django-environment: &django-environment
   - OKTA_CLIENT_ID
   - OKTA_CLIENT_SECRET
   - OKTA_API_URL
+  - ADFS_CLIENT_ID
+  - ADFS_CLIENT_SECRET
+  - ADFS_API_URL
   - MAILGUN_API_KEY
   - MAILGUN_SENDER_DOMAIN
   - MAILGUN_REGION
