--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ x-django-environment: &django-environment
   - SERVER_EMAIL
   - DEFAULT_FROM_EMAIL
   - ADMIN_BASE_URL
+  - OIDC_RSA_PRIVATE_KEY
 
 x-django-build: &django-build
   context: .
